# snipr

./: .gitignore  README.md  SnipSnap.sln  Snipr.sln
snipr-linux/: pyproject.toml
snipr-linux/data/: com.snipr.Snipr.desktop
snipr-linux/snipr/: __init__.py  __main__.py  app.py
snipr-linux/snipr/models/: __init__.py  capture_mode.py  capture_result.py  recording_state.py
snipr-linux/snipr/resources/: snipr.css
snipr-linux/snipr/services/: __init__.py  clipboard.py  display_server.py  screen_capture.py  screen_capture_portal.py  screen_capture_x11.py  video_recording.py  window_enum.py
snipr-linux/snipr/ui/: freeform_overlay.py  main_window.py  recording_indicator.py  rectangle_overlay.py  window_overlay.py
src/SnipSnap/: App.xaml  App.xaml.cs  SnipSnap.csproj  app.manifest
src/SnipSnap/Helpers/: ScreenHelper.cs  Win32Interop.cs
src/SnipSnap/Models/: CaptureMode.cs  CaptureResult.cs  RecordingState.cs
src/SnipSnap/Services/: ClipboardService.cs  IScreenCaptureService.cs  IScreenProvider.cs  IThemeService.cs  IVideoRecordingService.cs  RegionCalculator.cs  ScreenCaptureService.cs  ThemeService.cs  VideoRecordingService.cs  WindowEnumerationService.cs
src/SnipSnap/ViewModels/: MainViewModel.cs  SelectionViewModel.cs  ViewModelBase.cs
src/SnipSnap/Views/: FreeformSelectionOverlay.xaml  FreeformSelectionOverlay.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  RecordingIndicator.xaml  RecordingIndicator.xaml.cs  RectangleSelectionOverlay.xaml  RectangleSelectionOverlay.xaml.cs  (+2 more)
src/Snipr/: App.xaml  App.xaml.cs  Snipr.csproj  app.manifest
(+30 files in other folders)
